--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "rebuild": "node-gyp clean;node-gyp configure;node-gyp --verbose build",
     "config": "node-gyp configure",
-    "build": "node-gyp --verbose build",
+    "build": "node-gyp configure;node-gyp --verbose build",
     "clean": "rm -rf build"
   },
   "repository": {
@@ -21,5 +21,8 @@
   "dependencies": {
     "bindings": "^1.5.0",
     "nan": "^2.14.0"
+  },
+  "devDependencies": {
+    "node-gyp": "^8.1.0"
   }
 }
